<resources>
    <string name="app_name">basic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="animation_one">Animation</string>
    <string name="animation_two">Animation</string>
    <string name="send_msg">开始生产机器人</string>
    <string name="read_start">read start ......</string>
    <string name="read_finish">read finish ......</string>
    <string name="choice_color">选择色彩</string>
    <string name="error_demo_one">running error following code</string>
    <string name="right_demo_one">running right following code</string>
    <string name="subject">subject</string>
    <string name="to">to</string>
    <string name="initCustomer">Create customer</string>
    <string name="title_activity_app_com">AppComActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="start">start</string>
    <string name="fragment_1">1</string>
    <string name="fragment_2">2</string>
    <string name="fragment_3">3</string>
    <string name="title_activity_basic_imea">BasicImeaActivity</string>
    <string name="imea">imea</string>
    <string name="title_activity_basic_device_info">BasicDeviceInfoActivity</string>
    <string name="error_main_thread">主线程出现异常</string>
    <string name="error_sub_thread">子线程出现异常</string>
    <string name="https_connnect">Https Connect</string>
    <string name="https_connnect_method_two">Https Connect method two</string>
    <string name="androidId"> androidId</string>
    <string name="IMEI"> IMEI </string>
    <string name="UUID"> UUID </string>
    <string name="macAddress"> MacAddress</string>
    <string name="instanceId">instanceId</string>
    <string name="randomUUID"> randomUUID</string>
    <string name="advertisingId">AdvertisingId</string>

    <!-- Basic Graphic -->
    <string name="loadImageData">Load Image Data</string>
    <string name="processImageOffTheUiThread">Process Image off the Thread</string>
    <string name="cacheBitmap">Cache Bitmap</string>
    <string name="managerBitmapMemory">Manager Bitmap memory</string>
    <string name="displayBitmapOnUI">Display bitmap on UI</string>
    <string name="title_activity_basic_mem_list">BasicMemListActivity</string>


    <string name="scan">scaning</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="crashOccur"> crash </string>

    <string name="ok">ok</string>

    <string name="permission">request permission</string>
    <string name="request_permission">request permission</string>
    <string name="request_info">request info</string>


    <string name="getPathInfo">get path info</string>
    <string name="createPathInfo">create path info</string>
    <string name="createInternalFile">create internal file</string>
    <string name="createExternalFile">create external file</string>


    <string name="getInternalFileDir">get Internal File</string>
    <string name="getInternalFileCacheDir">get Internal File cache dir</string>


    <string name="getExternalPublicFile">get external public File Root</string>
    <string name="getExternalFileRoot">get external File Root</string>

    <string name="createSDCardRootFolder">create sd card Root folder</string>

    <string name="createSDCardRootFolderFile">create sd card Root folder/File</string>



</resources>
