<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_getextpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getExtFilePath"
        android:text="@string/getPathInfo" />


    <Button
        android:id="@+id/btn_create_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createExtFile"
        android:text="@string/createPathInfo" />


    <Button
        android:id="@+id/btn_save_internal_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createInternalFile"
        android:text="@string/createInternalFile" />


    <Button
        android:id="@+id/btn_create_external_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createExternalFile"
        android:text="@string/createExternalFile" />


</LinearLayout>