<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sny.tangyong.basic.BasicUnquiueIdentifyActivity">

    <!--  Android Id -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_androidId"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/androidId" />

        <TextView
            android:id="@+id/tx_androidId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/androidId" />

    </TableRow>

    <!--  MAC 地址-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_mac"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/macAddress" />

        <TextView
            android:id="@+id/tx_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/macAddress" />

    </TableRow>

    <!-- UUID  -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_uuid"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/UUID" />

        <TextView
            android:id="@+id/tx_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/UUID" />

    </TableRow>


    <!-- IMEI  -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_imei"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/IMEI" />

        <TextView
            android:id="@+id/tx_imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/IMEI" />

    </TableRow>


    <!-- InstanceID API  -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_instanceId"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/instanceId" />

        <TextView
            android:id="@+id/tx_instanceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/instanceId" />

    </TableRow>


    <!-- randomUUID -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_randomUUID"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/randomUUID" />

        <TextView
            android:id="@+id/tx_randomUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/randomUUID" />

    </TableRow>


    <!-- AdvertisingId  -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_advertisingId"
            style="?android:attr/buttonStyleToggle"
            android:layout_column="0"
            android:text="@string/advertisingId" />

        <TextView
            android:id="@+id/tx_advertisingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/advertisingId" />

    </TableRow>


</TableLayout>
