<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly_animation"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ghxp"
        android:gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textColor="#ffffff"
            android:textSize="12pt" />

    </LinearLayout>

    <!--    -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_one" />

        <Button
            android:id="@+id/btn_animation_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_two" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/animation_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/animation_img_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dip"
            android:layout_marginTop="133dip"
            android:src="@drawable/notification_template_icon_bg" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_centerInParent="true"
            android:src="@drawable/notification_template_icon_bg" />
    </RelativeLayout>


</RelativeLayout>